fixed menu bg on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ html {
 .container {
   max-width: 940px;
   margin: 0 auto;
-  position: relative;
 }
 
 body {
@@ -54,10 +53,10 @@ header.nav-menu .menu {
   width: 100%;
   min-height: 56px;
   padding-top: 33px;
-  background-color: #fff;
-  opacity: 0.95;
   top: 0;
   z-index: 1000;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
 }
 
 header.nav-menu .menu .menu-list {
@@ -81,6 +80,17 @@ header.nav-menu .menu .mobile-burger {
   display: none;
 }
 
+header.nav-menu .menu:before {
+  content: '';
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: -32%;
+  background-color: #fff;
+  height: 100%;
+  opacity: 0.7;
+}
+
 header.nav-menu .menu .divider {
   width: 100%;
   height: 1px;
@@ -89,19 +99,6 @@ header.nav-menu .menu .divider {
   margin-top: 38px;
   -webkit-transition: 1s all;
   transition: 1s all;
-}
-
-header.nav-menu .scroll-bg {
-  width: 100%;
-  position: fixed;
-  height: 89px;
-  top: 0;
-  left: 0;
-  background-color: #fff;
-  opacity: 0.95;
-  display: none;
-  -webkit-transition: 0.5s all;
-  transition: 0.5s all;
 }
 
 .header {
@@ -406,6 +403,9 @@ footer-descr {
   }
   header.nav-menu .menu.mobile-active {
     right: 0;
+  }
+  header.nav-menu .menu:before {
+    display: none;
   }
   header.nav-menu .menu .menu-list {
     display: block;
